.opsera-snakeforged/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-snakeforged-dev
  labels:
    app: snakeforged
    tenant: opsera
    environment: dev
    managed-by: opsera-c2c
