.opsera-snakeforged/k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakeforged
spec:
  template:
    spec:
      containers:
        - name: snakeforged
