.opsera-snakeforged/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snakeforged
  labels:
    environment: dev
spec:
  rules:
    - host: snakeforged-dev.agent.opsera.dev
